[gd_scene load_steps=19 format=3 uid="uid://buemv2gxyydv7"]

[ext_resource type="Script" path="res://UI/Menus/CharacterSelectMenu/CharacterSelectMenu.gd" id="1_cun0o"]
[ext_resource type="PackedScene" uid="uid://dtpkylmn14mi6" path="res://UI/Elements/MenuButton/MenuButton.tscn" id="2_qfv5o"]
[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="3_qbplp"]
[ext_resource type="PackedScene" uid="uid://dins546jhadrn" path="res://UI/Elements/Card/Card.tscn" id="4_4pkj3"]
[ext_resource type="Shader" path="res://Shaders/dream_shader.gdshader" id="4_doa6u"]
[ext_resource type="Texture2D" uid="uid://bvyw2arekg3an" path="res://Assets/art/icons/medieval-fantasy/lorc/barbute.svg" id="4_rkshs"]

[sub_resource type="FontVariation" id="FontVariation_ewl22"]
base_font = ExtResource("3_qbplp")
spacing_glyph = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_urfkd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5288"]

[sub_resource type="FontVariation" id="FontVariation_4axqc"]
base_font = ExtResource("3_qbplp")

[sub_resource type="FastNoiseLite" id="2"]
frequency = 0.005
fractal_octaves = 3
fractal_lacunarity = 1.7

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_oecgp"]
seamless = true
as_normal_map = true
noise = SubResource("2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5rnsc"]
shader = ExtResource("4_doa6u")
shader_parameter/strength = 0.15
shader_parameter/noise = SubResource("NoiseTexture2D_oecgp")

[sub_resource type="Animation" id="Animation_6quvo"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sections:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_28rpa"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sections:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_w5jmv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sections:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeRect:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FadeRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0xlkw"]
resource_name = "fade_to_black"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2j24"]
_data = {
"RESET": SubResource("Animation_w5jmv"),
"fade_in": SubResource("Animation_6quvo"),
"fade_out": SubResource("Animation_28rpa"),
"fade_to_black": SubResource("Animation_0xlkw")
}

[node name="CharacterSelectMenu" type="CanvasLayer"]
script = ExtResource("1_cun0o")

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.309804)

[node name="Sections" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 120

[node name="TopArea" type="MarginContainer" parent="Sections"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="SectionButtons" type="HBoxContainer" parent="Sections/TopArea"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="KnightButton" parent="Sections/TopArea/SectionButtons" instance=ExtResource("2_qfv5o")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "KNIGHT"

[node name="WarClericButton" type="Button" parent="Sections/TopArea/SectionButtons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.603922, 0.603922, 0.603922, 1)
theme_override_colors/font_outline_color = Color(0.498039, 0.631373, 0.870588, 0.384314)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_ewl22")
theme_override_font_sizes/font_size = 35
theme_override_styles/disabled = SubResource("StyleBoxEmpty_urfkd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i5288")
disabled = true
text = "? ? ? ? ?"
flat = true

[node name="RangerButton" type="Button" parent="Sections/TopArea/SectionButtons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.603922, 0.603922, 0.603922, 1)
theme_override_colors/font_outline_color = Color(0.498039, 0.631373, 0.870588, 0.384314)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_ewl22")
theme_override_font_sizes/font_size = 35
theme_override_styles/disabled = SubResource("StyleBoxEmpty_urfkd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i5288")
disabled = true
text = "? ? ? ? ?"
flat = true

[node name="CharacterInfo" type="HBoxContainer" parent="Sections"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionContainer" type="MarginContainer" parent="Sections/CharacterInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 120
theme_override_constants/margin_right = 120

[node name="VBoxContainer" type="VBoxContainer" parent="Sections/CharacterInfo/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="Sections/CharacterInfo/DescriptionContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 32
text = "THE KNIGHT"
horizontal_alignment = 1

[node name="Line" type="Label" parent="Sections/CharacterInfo/DescriptionContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
text = "---"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Sections/CharacterInfo/DescriptionContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
text = "Knight to meet you. Ha."
horizontal_alignment = 1

[node name="CharacterTexture" type="TextureRect" parent="Sections/CharacterInfo"]
material = SubResource("ShaderMaterial_5rnsc")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_rkshs")
expand_mode = 1

[node name="StartingInfoContainer" type="VBoxContainer" parent="Sections/CharacterInfo"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Sections/CharacterInfo/StartingInfoContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 32
text = "STARTING ITEM"
horizontal_alignment = 1

[node name="Card" parent="Sections/CharacterInfo/StartingInfoContainer" instance=ExtResource("4_4pkj3")]
layout_mode = 2
size_flags_vertical = 4

[node name="Button" parent="Sections/CharacterInfo/StartingInfoContainer/Card" index="3"]
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Sections"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/separation = 300
alignment = 1

[node name="BackButton" parent="Sections/HBoxContainer" instance=ExtResource("2_qfv5o")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "BACK"

[node name="StartRunButton" parent="Sections/HBoxContainer" instance=ExtResource("2_qfv5o")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "START RUN"

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t2j24")
}

[connection signal="pressed" from="Sections/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Sections/HBoxContainer/StartRunButton" to="." method="_on_start_run_button_pressed"]

[editable path="Sections/CharacterInfo/StartingInfoContainer/Card"]
